--- a/app/static/styles-quiz.css
+++ b/app/static/styles-quiz.css
@@ -6,115 +6,134 @@
 }
 .body {
     display: relative;
-    width: 100vw; 
+    width: 100%; 
     height: 100vh;
     min-height: 400px;
     font-size: 0;
-    overflow: hidden;
+    overflow: auto;
 }
 .background-1 {
-    position: absolute;
+    position: fixed;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     clip-path: polygon(10% 100%, 100% 20%, 100% 100%);
     background-color: #008040;
     z-index: 7;
 }
 .background-2 {
-    position: absolute;
+    position: fixed;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     clip-path: polygon(0 98%, 100% 18%, 100% 100%, 0 100%);
     background-color: white;
     z-index: 6;
 }
 .background-3 {
-    position: absolute;
+    position: fixed;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     clip-path: polygon(0 0%, 100% 90%, 100% 100%, 0 100%);
     background-color: #00a251;
     z-index: 5;
 }
 .background-4 {
-    position: absolute;
+    position: fixed;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     clip-path: polygon(0 -2%, 100% 85%, 100% 100%, 0 100%);
     background-color: white;
     z-index: 4;
 }
 .background-5 {
-    position: absolute;
+    position: fixed;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     clip-path: polygon(80% 0%, 100% 0%, 100% 100%, 0 100%, 0 20%);
     background-color: #00c161;
     z-index: 3;
 }
 .background-6 {
-    position: absolute;
+    position: fixed;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     clip-path: polygon(78% 0%, 100% 0%, 100% 100%, 0 100%, 0 17%);
     background-color: white;
     z-index: 2;
 }
 .background-7 {
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: fixed;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: #7680d3;
     z-index: 1;
 }
-.content-container-1 {
+.content {
     display: flex;
-    flex-direction: column;
-    position: absolute;
+    position: relative;
     width: 100%;
-    height: 100%;
-    border: 5px dotted black;
+    min-width: 1500px;
+    min-height: 100vh;
+    padding-left: 20vw;
     justify-content: center;
-    align-items: center;
+    border: 0.5cqw dotted black;
     z-index: 20;
 }
+.zone-1 {
+    display: flex;
+    flex: 1;
+    /* border: 5px dashed blue; */
+}
+.zone-1-1 {
+    display: flex;
+    flex: 6;
+    min-width: 500px;
+    max-width: 1000px;
+    margin-left: auto;
+    flex-direction: column;
+    justify-content: center;
+    /* border: 5px dotted white; */
+}
+.zone-1-2 {
+    display: flex;
+    flex: 2;
+    width: 20vw;
+    align-items: center;
+    /* border: 5px dashed black; */
+}
 #question-container {
-    display: block;
-    width: 60%;
-    height: 10%;
-    padding: 3vh;
+    display: flex;
+    height: 90px;
+    min-height: 90px;
+    padding: clamp(0%, 25px, 5%);
+    font-size: 1.5rem;
     color: white;
-    font-family: sans-serif;
-    font-size: 1.5cqw;
     background-color: rgba(50, 50, 50, 0.75);
-    text-align: center;
+    justify-content: center;
     overflow-x: hidden;
     overflow-y: auto;
     word-break: break-word;
+    /* border: 5px dashed black; */
 }
 .content-container-2 {
     display: flex;
     position: relative;
-    width: 60%;
-    height: 60%;
-    min-height: 200px;
+    height: 460px;
     color: white;
     background-color: rgba(50, 50, 50, 0.75);
-    margin: 0.5% auto;
+    margin-top: 0.5%;
     padding: 3% 0;
+    /* border: 5px dashed white; */
 }
 #user-answer {
     display: block;
     position: relative;
     width: 40%;
     margin-left: 5%;
-    padding: 1vh;
+    padding: 0.75rem;
     font-family: sans-serif;
     background-color: white;
-    border: 1cqw solid #7680d3;
-    border-radius: 1cqw;
+    border: 1rem solid #7680d3;
+    border-radius: 1rem;
     resize: none;
     z-index: 22;
 }
@@ -126,51 +145,59 @@
     position: relative;
     width: 40%;
     margin-left: 10%;
-    padding: 1vh;
+    padding: 0.75rem;
     font-family: sans-serif;
     background-color: gray;
-    border: 1cqw solid transparent;
-    border-radius: 1cqw;
+    border: 1rem solid transparent;
+    border-radius: 1rem;
     resize: none;
     cursor: default;
 }
 #feedback {
-    box-sizing: content-box;
     display: none;
     position: absolute;
-    left: -17cqw;
+    left: clamp(-16rem, -16cqw, 1000px);
     margin-top: 1%;
-    padding: 5vh;
-    padding-right: 20vw;
+    padding: 2rem clamp(0%, 20cqw, 400px) 2rem clamp(40px, 5cqw, 100px);
     color: white;
-    font-size: 3cqw;
+    font-size: clamp(0%, 2cqw, 2rem);
     font-weight: bold;
     font-family: sans-serif;
     justify-content: center;
     align-items: center;
     background-color: #008040;
-    border: 0.0cqw solid white;
-    border-radius: 1cqw;
+    border: 0.0rem solid white;
+    border-radius: 1rem;
     z-index: 21;
+}
+.zone-1-2 > div {
+    display: flex;
+    width: 100%;
+    padding-left: 20px;
+    padding-bottom: 50px;
+    height: calc(550px + 0.5%);
+    /* border: 5px dashed black; */
 }
 #progressor {
     display: flex;
-    position: absolute;
-    top: 75%;
-    left: 81%;
-    padding: 2vh;
+    width: 200px;
+    min-width: 200px;
+    height: 75px;
+    margin-top: auto;
+    padding: 2%;
     color: white;
-    font-size: 1cqw;
+    font-size: 1rem;
     justify-content: center;
     align-items: center;
     background-color: #7680d3;
-    border: 0.1cqw solid white;
-    border-radius: 0.3cqw;
+    border: 0.1rem solid white;
+    border-radius: 0.3rem;
 }
 #progressor:hover {
-    font-size: 0.95cqw;
+    font-size: 0.95rem;
     font-weight: bold;
     background-color: #626ccc;
+    border-width: 0.2rem;
 }
 #progressor:active {
     background-color: #5561c8;
@@ -193,12 +220,13 @@
     top: 0;
     left: 25%;
     width: 50%;
-    height: 40%;
-    min-height: 200px;
+    height: 20cqw;
+    /* min-height: 500px;
+    max-height: 500px; */
     background-color: white;
     margin-top: 10vh;
     border: 1cqw solid #008040;
-    border-radius: 10px;
+    border-radius: 0.5cqw;
     justify-content: center;
     z-index: 31;
 }
@@ -219,7 +247,7 @@
     color: #5561c8;
     background-color: white;
     border: 0.5cqw solid #7680d3;
-    border-radius: 10px;
+    border-radius: 0.5cqw;
     font-family: sans-serif;
     font-size: 1cqw;
     text-decoration: none;
